force-app/main/default/objects/CC_CourseOffering__c/CC_CourseOffering__c.object-meta.xml
<CustomObject>
    <description>A scheduled instance of a Course Template being delivered to a client. / 研修コンテンツをもとに実際に予定・実施される開講。</description>
    <label>Course Offering</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>