force-app/main/default/objects/CC_CourseOffering__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <description>Maximum number of learners for this offering. / 受講者の最大人数。</description>
    <inlineHelpText>Enter the maximum capacity. / 定員を入力してください。</inlineHelpText>
    <label>Capacity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>