force-app/main/default/objects/CC_CourseOffering__c/fields/CourseTemplate__c.field-meta.xml
<CustomField>
    <fullName>CourseTemplate__c</fullName>
    <description>The course template this offering is based on. / この開講のもとになる研修コンテンツ。</description>
    <inlineHelpText>Select the course template being delivered. / 実施する研修コンテンツを選択してください。</inlineHelpText>
    <label>Course Template</label>
    <referenceTo>CC_CourseTemplate__c</referenceTo>
    <relationshipLabel>Course Offerings</relationshipLabel>
    <relationshipName>Course_Offerings</relationshipName>
    <type>MasterDetail</type>
</CustomField>