force-app/main/default/objects/CC_CourseOffering__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>End date of this offering. / 研修の終了日。</description>
    <inlineHelpText>Enter the end date. / 終了日を入力してください。</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>