force-app/main/default/objects/CC_CourseOffering__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The instructor assigned to this offering. / この開講を担当する講師。</description>
    <inlineHelpText>Select the assigned instructor. / 担当講師を選択してください。</inlineHelpText>
    <label>Instructor</label>
    <referenceTo>CC_Instructor__c</referenceTo>
    <relationshipLabel>Course Offerings</relationshipLabel>
    <relationshipName>Course_Offerings</relationshipName>
    <type>Lookup</type>
</CustomField>