force-app/main/default/objects/CC_CourseOffering__c/fields/InstructorFeedback__c.field-meta.xml
<CustomField>
    <fullName>InstructorFeedback__c</fullName>
    <description>Feedback from the instructor after delivery. / 講師からの所感・フィードバック。</description>
    <inlineHelpText>Record the instructor's comments after the course. / 実施後の講師コメントを記載してください。</inlineHelpText>
    <label>Instructor Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>