force-app/main/default/objects/CC_CourseOffering__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Opportunity that led to this offering. / この開講のもとになった商談。（フェーズ1で新設）</description>
    <inlineHelpText>Select the Opportunity this offering fulfills, if applicable. / 該当する商談があれば選択してください。</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Course Offerings</relationshipLabel>
    <relationshipName>Course_Offerings</relationshipName>
    <type>Lookup</type>
</CustomField>