force-app/main/default/objects/CC_CourseOffering__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>Evaluation score for this offering. / 開講に対する評価。</description>
    <inlineHelpText>Enter a score from 1.0 to 5.0 (3.0 = average). / 1.0〜5.0の範囲でスコアを入力してください（3.0が中央値）。</inlineHelpText>
    <label>Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>