force-app/main/default/objects/CC_CourseOffering__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Start date of this offering. / 研修の開始日。</description>
    <inlineHelpText>Enter the start date. / 開始日を入力してください。</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>