force-app/main/default/objects/CC_CourseOffering__c/fields/TotalSessions__c.field-meta.xml
<CustomField>
    <fullName>TotalSessions__c</fullName>
    <description>Number of sessions planned for this offering. / 開催回数。</description>
    <inlineHelpText>Enter the total planned number of sessions. / 開催予定の総回数を入力してください。</inlineHelpText>
    <label>Total Sessions</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>