force-app/main/default/objects/CC_CourseOffering__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CC_CourseTemplate__c</columns>
    <columns>CC_Instructor__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Rating__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>